--- a/abstract.tex
+++ b/abstract.tex
@@ -1,7 +1,7 @@
 The goal of our work is to simplify and expedite the 
 construction and evaluation of machine learning models 
 using autoscaled cloud computing systems and services.
-To enable this, we develop an open source system, called Seneca, that leverages
+To enable this, we develop an open source system, Seneca, that leverages
 the serverless programming model and its implementation in Amazon Web Services
 (AWS) Lambda.  
 Seneca takes a machine learning application, dataset, and a list of 
@@ -19,6 +19,6 @@ Our empirical evaluation using multiple predictive machine learning applications
 for regression and classification shows that Seneca is able to quickly
 identify the best performing model for the programs and datasets that we consider.
 Moreover, its memory optimization reduces the cost of using Seneca 
-by 10-30\% for the applications studied.
+by 10--35\% for the applications studied.
 
 %The involvement of manual operations and domain expertise makes traditional model optimization process expensive, time-consuming and not guaranteed the optimal solution. The emergence of serverless computing offers the potential to optimize models in an auto-scaling and micro-billing fashion. In this paper, we present Seneca -- a framework for machine learning model optimization on serverless computing platform. Its automated pipeline consists of packaging, deployment, serverless function optimization and hyperparameter tuning, which provides a cost-effective, high-performing and reliable model optimization service. We evaluate Seneca by performance, cost and latency analysis on multiple regression and classification applications. The result demonstrates Seneca streamlines model deployment and optimization in agile and economical fashion.
