--- a/paper.tex
+++ b/paper.tex
@@ -78,7 +78,8 @@
 % http://www.ctan.org/tex-archive/macros/latex/required/amslatex/math/
 
 
-\usepackage[]{algorithm2e}
+\usepackage[linesnumbered, ruled, vlined]{algorithm2e}
+%\usepackage{algorithm}
 
 % *** SPECIALIZED LIST PACKAGES ***
 %
