--- a/ref.bib
+++ b/ref.bib
@@ -162,19 +162,11 @@ month={March},}
 
 @article{ref:prophet,
  title = {Forecasting at scale},
- author = {Taylor, Sean J and Letham, Benjamin},
+ author = {S. Taylor and B. Letham},
  year = 2017,
  month = sep,
- keywords = {Time Series, Statistical Practice, Nonlinear Regression},
- abstract = {
-        Forecasting is a common data science task that helps organizations with capacity planning, goal setting, and anomaly detection. Despite its importance, there are serious challenges associated with producing reliable and high quality forecasts — especially when there are a variety of time series and analysts with expertise in time series modeling are relatively rare. To address these challenges, we describe a practical approach to forecasting “at scale” that combines configurable models with analyst-in-the-loop performance analysis. We propose a modular regression model with interpretable parameters that can be intuitively adjusted by analysts with domain knowledge about the time series. We describe performance analyses to compare and evaluate forecasting procedures, and automatically flag forecasts for manual review and adjustment. Tools that help analysts to use their expertise most effectively enable reliable, practical forecasting of business time series.
-      },
  volume = 5,
- pages = {e3190v2},
  journal = {PeerJ Preprints},
- issn = {2167-9843},
- url = {https://doi.org/10.7287/peerj.preprints.3190v2},
- doi = {10.7287/peerj.preprints.3190v2}
 }
 @inproceedings{iot-cpu,
   title={Estimating Outdoor Temperature from CPU Temperature for IoT Applications in Agriculture},
@@ -212,8 +204,7 @@ month={March},}
 @inproceedings{ref:feedforward_nn,
   title={Understanding the difficulty of training deep feedforward neural networks},
   author={Glorot, Xavier and Bengio, Yoshua},
-  booktitle={Proceedings of the thirteenth international conference on artificial intelligence and statistics},
-  pages={249--256},
+  booktitle={International conference on artificial intelligence and statistics},
   year={2010}
 }
 
@@ -241,7 +232,7 @@ month={March},}
 
 @electronic{ref:serverless_framework,
   title         = "Serverless Framework",
-  url           = "https:https://serverless.com/",
+  url           = "https://serverless.com/",
   key           = "Serverless Framework",
   month         = "Jan.",
   year          = "2019"
@@ -308,7 +299,6 @@ month={March},}
 @inproceedings{ref:matrix,
 author = {Werner, Sebastian and Kuhlenkamp, Jorn and Klems, Markus and Muller, Johannes and Tai, Stefan},
 year = {2018},
-month = {12},
 title = {Serverless Big Data Processing using Matrix Multiplication as Example},
 doi = {10.1109/BigData.2018.8622362}
 }
@@ -323,11 +313,9 @@ doi = {10.1109/BigData.2018.8622362}
 }
 
 @inproceedings{ref:claesen2014hyperparameter,
-  title={Hyperparameter tuning in Python using Optunity},
+  title={Hyperparameter tuning in Python using Opportunity},
   author={Claesen, Marc and Simm, Jaak and Popovic, Dusan and Moor, BD},
-  booktitle={Proceedings of the International Workshop on Technical Computing for Machine Learning and Mathematical Engineering},
-  volume={1},
-  pages={3},
+  booktitle={Workshop on Technical Computing for Machine Learning and Mathematical Engineering},
   year={2014}
 }
 
@@ -341,10 +329,8 @@ doi = {10.1109/BigData.2018.8622362}
 @inproceedings{ref:vizier,
   title={Google vizier: A service for black-box optimization},
   author={Golovin, Daniel and Solnik, Benjamin and Moitra, Subhodeep and Kochanski, Greg and Karro, John and Sculley, D},
-  booktitle={Proceedings of the 23rd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
-  pages={1487--1495},
+  booktitle={ACM SIGKDD},
   year={2017},
-  organization={ACM}
 }
 
 @inproceedings{ref:lin2018tracking,
@@ -391,13 +377,8 @@ publisher = {{USENIX} Association},
 @inproceedings {ref:peeking,
 author = {Liang Wang and Mengyuan Li and Yinqian Zhang and Thomas Ristenpart and Michael Swift},
 title = {Peeking Behind the Curtains of Serverless Platforms},
-booktitle = {2018 {USENIX} Annual Technical Conference ({USENIX} {ATC} 18)},
+booktitle = {{USENIX ATC}},
 year = {2018},
-isbn = {978-1-931971-44-7},
-address = {Boston, MA},
-pages = {133--146},
-url = {https://www.usenix.org/conference/atc18/presentation/wang-liang},
-publisher = {{USENIX} Association},
 }
 
 @article{ref:jonas2019cloud,
@@ -413,3 +394,9 @@ publisher = {{USENIX} Association},
     year = "2019"
 }
 
+@inproceedings{gammaray18,
+  title={{Tracking Causal Order in AWS Lambda Applications}},
+  author={W-T. Lin and C. Krintz and R. Wolski and M. Zhang},
+  booktitle={IEEE International Conference on Cloud Engineering},
+  year={2018},
+}
