--- a/tables/accu-tab.tex
+++ b/tables/accu-tab.tex
@@ -1,17 +1,18 @@
-
 \begin{tabular}{|l|c|c|c|}
 \hline
-\textbf{80\%-20\%} & XGBoost & SVC & NN\\
+\textbf{80\%-20\%} & \textbf{XGBoost} & \textbf{SVC} & \textbf{NN}\\
 \hline
 \# of Combinations & 768 & 512 & 432 \\
 \hline
 \hline
 Default Accuracy & 95.65\% & 21.77\% & 79.53\%\\
 \hline
-Worst Accuracy&0.00\%&14.08\% & 19.40\%\\
+Worst Accuracy&0.00\%&14.08\% & 19.15\%\\
 \hline
-Best Accuracy (Seneca) &98.11\% & 40.81\% & 83.31\%\\
+Best Accuracy (Seneca) &98.11\% & 40.81\% & 83.32\%\\
 \hline
+
+
 %\hline
 %\hline
 %\textbf{20\%-80\%} & XGBoost & SVC & NN\\
