--- a/tables/application-tab.tex
+++ b/tables/application-tab.tex
@@ -11,7 +11,7 @@ XGBoost& Regression and classification by gradient boosting\\
 \hline
 SVC & Classification based on support vector machine\\
 \hline
-NN& Classification by layered artificial neural network\\
+Neural-Net& Classification by layered artificial neural network\\
 \hline
 \end{tabular}
 %}
