--- a/tables/seneca-mem-opt-tab.tex
+++ b/tables/seneca-mem-opt-tab.tex
@@ -5,23 +5,23 @@
 & \textbf{Prophet} & \textbf{MR} & \textbf{XGBoost} & \textbf{SVC} & \textbf{NN} \\
 \hline
 \hline
-Exec time max (mins)& 24.96 & 4.18 & 17.48 & 1.91 & 2.49 \\
+Exec time max (mins)& 7.78 & 2.71 & 20.85 & 0.87 & 2.06 \\
 \hline
-Cost max (\$) & 0.722 & 0.121 & 0.5 & 0.023 & 0.072 \\
-\hline
-\hline
-Exec time opt (mins)& 38.7 & 8.72 & 29.07 & 1.95 & 3.17 \\
-\hline
-Optimizer Cost (\$) &0.033 & 0.014 & 0.003 & 0.010 & 0.008 \\
-\hline
-Cost opt (\$) &0.62 & 0.086 & 0.354 & 0.007 & 0.056 \\
-\hline
-Total Cost (\$) &0.653 & 0.1 & 0.357 & 0.016 & 0.064 \\
+Cost max (cents) & 22.16 & 7.58 & 59.92 & 2.21 & 5.92 \\
 \hline
 \hline
-Savings (\$) & 0.07 & 0.02 & 0.15 & 0.007 & 0.008\\
+Exec time opt (mins)& 12.60 & 4.09 & 29.07 & 2.08 & 3.06 \\
 \hline
-Savings (\%) & 10\% & 17\% & 30\% & 30\% & 11\%\\
+Optimizer Cost (cents) & 2.02 & 1.27 & 0.05 & 0.04 & 0.04 \\
+\hline
+Cost opt (cents) &17.81 & 4.47 & 39.76 & 1.38 & 4.39 \\
+\hline
+Total Cost (cents) &19.83 & 5.74 & 39.81 & 1.43 & 4.44 \\
+\hline
+\hline
+Savings (cents) & 2.33 & 1.84 & 20.11 & 0.78 & 1.48\\
+\hline
+Savings (\%) & 10.49\% & 24.23\% & 33.57\% & 35.42\% & 24.98\%\\
 \hline
 \end{tabular}
 }
