--- a/tables/hparams-prophet-tab.tex
+++ b/tables/hparams-prophet-tab.tex
@@ -4,7 +4,7 @@
 \hline
 \textbf{Hyperparameter}& \textbf{Default} & \textbf{Tuning options}\\
 \hline
-grow & linear & [linear, logistic] \\
+growth & linear & [linear, logistic] \\
 \hline
 changepoint prior scale & 0.05 & [0.05, 0.5] \\
 \hline
