--- a/tables/mse-tab.tex
+++ b/tables/mse-tab.tex
@@ -1,15 +1,15 @@
 \begin{tabular}{|c|c|c|c|}
 \hline
-& Prophet & Multi-Regression & XGBoost\\
+& \textbf{Prophet} & \textbf{Multi-Regression} & \textbf{XGBoost}\\
 \hline
 \# of Combinations & 384 & 255 & 768\\
 \hline
 \hline
-Default MSE & 0.284 & 11.446 & 0.119 \\
+Default MSE & 0.284 & 11.446 & 0.118 \\
 \hline
-Worst MSE & 1.266 & 43.752 & 8.98 \\
+Worst MSE & 1.266 & 43.752 & 8.981 \\
 \hline
-Best MSE (Seneca) & 0.220 & 9.621 & 0.044 \\
+Best MSE (Seneca) & 0.220 & 9.621 & 0.065 \\
 \hline
 %percent difference between default and best 26.07%, 15.94%, 67.30%
 %percent difference between worst and best 82.63%, 78.01%, 95.52%
